[project]
name = "fastmcp-demo-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "db-sqlite3>=0.0.1",
    "fastmcp>=2.12.4",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
]
